--- a/public/style.css
+++ b/public/style.css
@@ -53,3 +53,25 @@ header .row{
     font-weight: 600;
     color: white;
 }
+
+.functions{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 21rem;
+    height: 15rem;
+    text-align: center;
+}
+
+.functions h3{
+    margin-bottom: 0;
+    color: white;
+}
+
+.functions p{
+    margin-top: .4rem;
+    color: white;
+    font-size: 14px;
+    font-weight: 100;
+}
