--- a/public/style.css
+++ b/public/style.css
@@ -54,13 +54,21 @@ header .row{
     color: white;
 }
 
+.middle-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10rem 2rem;
+}
+
 .functions{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 21rem;
-    height: 15rem;
+    width: 22rem;
+    height: 12rem;
     text-align: center;
 }
 
@@ -74,4 +82,73 @@ header .row{
     color: white;
     font-size: 14px;
     font-weight: 100;
+}
+
+.func{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
+    column-gap: 10rem;
+    row-gap: 5rem;
+}
+
+.func2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5rem;
+    gap: 5rem;
+    padding: 0rem 7rem;
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+    color: white;
+}
+
+.info h1{
+    width: 60%;
+}
+
+.info p{
+    width: 95%;
+}
+
+.review{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    padding: 5rem;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2.5rem 2rem;
+    color: white;
+    background-color: hsl(219, 30%, 18%);
+    box-shadow: 5px 0px 2px 2px rgba(75, 74, 74, 0.219);
+}
+
+.user{
+    display: flex;
+    gap: 1rem;
+}
+
+.user img{
+    width: 2rem;
+    height: 2rem;
+    border-radius: 100%;
+}
+
+.user_detail{
+    display: flex;
+    flex-direction: column;
+}
+
+.user_detail h5,p{
+    margin: 0;
 }
