--- a/public/style.css
+++ b/public/style.css
@@ -31,16 +31,27 @@ header .row{
 }
 
 .top-section h1{
-    width: 50%;
+    width: 52%;
     font-size: 46px;
     color: white;
 }
 
 .top-section p{
     color: rgba(255, 255, 255, 0.873);
-    width: 34%;
-    font-size: 20px;
+    width: 35%;
+    font-size: 18px;
     line-height: 1.7rem;
+}
+
+.intro{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 5rem;
+    background-image: url("../src/images/bg-curvy-desktop.svg");
+    background-position:top;
+    background-size:cover;
 }
 
 .btn{
@@ -52,6 +63,7 @@ header .row{
     font-size: 19px;
     font-weight: 600;
     color: white;
+    margin-top: 2rem;
 }
 
 .middle-section{
@@ -59,7 +71,9 @@ header .row{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 10rem 2rem;
+    background-color: hsl(218, 28%, 13%);
+    margin-top:5rem;
+    padding-bottom: 10rem;
 }
 
 .functions{
@@ -113,6 +127,7 @@ header .row{
 
 .info p{
     width: 95%;
+    margin-bottom: 1rem;
 }
 
 .review{
@@ -127,7 +142,9 @@ header .row{
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 2.5rem 2rem;
+    width: 22rem;
+    height: 8rem;
+    padding: 2rem 2rem 1rem 2rem;
     color: white;
     background-color: hsl(219, 30%, 18%);
     box-shadow: 5px 0px 2px 2px rgba(75, 74, 74, 0.219);
@@ -151,4 +168,103 @@ header .row{
 
 .user_detail h5,p{
     margin: 0;
+}
+
+.user_detail p{
+    font-size: 8px;
+}
+
+.bottom-section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 8rem;
+    background-color: hsl(216, 53%, 9%);
+}
+
+.signup{
+    display: flex;
+    flex-direction: column;
+    width: 53%;
+    background-color: hsl(217, 28%, 15%);
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    padding: 2rem 0rem;
+    margin-top: -10rem;
+    color: white;
+}
+
+.signup p{
+    width: 80%;
+    font-size: 14px;
+    text-align: center;
+}
+
+.signup-row{
+    display: flex;
+    gap: 2rem;
+    margin-top: 2rem;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.signup-row input{
+    width: 25rem;
+    height: 3rem;
+    border-radius: 25px;
+    outline: none;
+    text-indent: 2rem;
+}
+
+.signup-row button{
+    padding: 1rem 2rem;
+    margin-top: 0;
+}
+
+footer{
+    background-color:hsl(216, 53%, 9%);
+    padding: 0rem 7rem;
+}
+
+.information{
+    display: flex;
+    color: white;
+    gap: 8rem;
+    margin-top: 2rem;
+}
+
+.location{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    width: 30%;
+}
+
+.contact{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+}
+
+.mobile,.gmail{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.col1 p,.col2 p{
+    padding-top: 1rem;
+}
+
+.links{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
 }
